feat: Implemented JWT authentication ✨
